Mobile fixes: Add line break in contact title, reduce Professional Experience title to 1.1rem

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="contact">
         <canvas id="wowEffectCanvas"></canvas>
         <div class="contact-container">
-            <h2>Let's See If We're a Good Fit.</h2>
+            <h2>Let's See If We're a<br>Good Fit.</h2>
             <p>If you're seeking someone experienced in scaling brands, optimizing eCommerce operations, and effectively collaborating across teams—I'd love the opportunity to connect.</p>
 
             <p>Throughout my career, I've focused on turning ideas into measurable results through strategic digital marketing, data-driven strategies, and streamlined workflows. If this aligns with your vision, <strong>let's talk.</strong></p>
