Added two new skill cards: Videography and Film Post-Processing

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
                     <h3>⚡ Fast Learner & Innovation-Driven</h3>
                     <p>Always staying ahead of industry trends, continuously learning, and implementing new strategies for growth.</p>
                 </div>
+                <div class="skill-card">
+                    <h3>🎥 Videography</h3>
+                    <p>Experience in capturing cinematic visuals as a camera operator for branded content and eCommerce campaigns.</p>
+                </div>
+                <div class="skill-card">
+                    <h3>🎞️ Film Post-Processing</h3>
+                    <p>Experience in filmic color grading using digital workflows to achieve rich, cinematic looks in DaVinci Resolve.</p>
+                </div>
             </div>
         </div>
     </section>
