Updated Digital Advertising skill card text from 'Expert' to 'Experience'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <h3>📈 Digital Advertising</h3>
-                    <p>Expert in scaling Meta and Google campaigns, optimizing performance through data-backed strategies.</p>
+                    <p>Experience in scaling Meta and Google campaigns, optimizing performance through data-backed strategies.</p>
                 </div>
                 <div class="skill-card">
                     <h3>📊 Data-Driven Growth</h3>
