Updated About Me section: Changed 'Expert in scaling' to 'Experience in scaling'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="timeline-item">
                     <h3>📊 Data-Driven Growth</h3>
-                    <p>Expert in scaling digital advertising campaigns across Meta and Google, optimizing performance through data-backed strategies.</p>
+                    <p>Experience in scaling digital advertising campaigns across Meta and Google, optimizing performance through data-backed strategies.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>🚀 Results-Focused</h3>
