Update job title to Growth Operations Manager and revise contact section text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <canvas id="heroCanvas"></canvas>
         <div class="hero-content">
             <h1 id="hero-text">Hey, I'm Philip Hoang</h1>
-            <p id="subtext">eCommerce & Performance Marketing Manager</p>
+            <p id="subtext">eCommerce & Growth Operations Manager</p>
         </div>
         <div class="scroll-indicator" id="scroll-indicator">
             <span>Scroll Down</span>
@@ -135,9 +135,9 @@
         <div class="contact-container">
             <h2 class="desktop-title">Let's See If We're a Good Fit.</h2>
             <h2 class="mobile-title">Let's See If We're a<br>Good Fit.</h2>
-            <p>If you're seeking someone experienced in scaling brands, optimizing eCommerce operations, and effectively collaborating across teams—I'd love the opportunity to connect.</p>
+            <p>If you're looking for someone who knows how to drive growth, lead eCommerce operations, and align teams for seamless execution — I'd love to have that conversation.</p>
 
-            <p>Throughout my career, I've focused on turning ideas into measurable results through strategic digital marketing, data-driven strategies, and streamlined workflows. If this aligns with your vision, <strong>let's talk.</strong></p>
+            <p>I've helped brands at all stages of growth, tackling challenges across marketing, retention, and backend operations. Whether it's optimizing systems, scaling revenue, or improving cross-team performance, the goal is always the same: to keep moving the business forward.</p>
 
             <p class="contact-name">Philip Hoang</p>
             <p class="contact-location">Orange County, CA</p>
